--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-core": "6.17.0",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.7",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.1.10",
     "babel-preset-es2015": "^6.22.0",
@@ -13,8 +14,8 @@
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "cors": "^2.8.3",
-    "enzyme": "^2.7.1",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.7.1",
     "eslint": "3.8.1",
     "eslint-config-google": "^0.7.1",
     "eslint-plugin-import": "2.0.1",
@@ -40,8 +41,8 @@
     "websocket": "^1.0.24"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server --open --config webpack.config.js",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
     "lint": "eslint src/ test/ || exit 0",
     "test": "mocha || exit 0",
     "test-debug": "mocha --inspect --debug-brk",
