--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "draft-js": "^0.10.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-localize-redux": "^2.12.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
