--- a/.eslintrc
+++ b/.eslintrc
@@ -16,10 +16,14 @@
     "plugin:import/errors",
     "plugin:import/warnings"
   ],
-  rules: {
-    "max-len": ["error", 120],
+  "rules": {
+    "max-len": ["error", 150],
     "require-jsdoc": "off",
     "comma-dangle": "off",
-    "linebreak-style": ["error", "windows"]
+    "linebreak-style": ["error", "windows"],
+    "no-console": "off",
+    "no-extend-native": "off",
+
+    "react/prop-types": "off"
   }
 }
