--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     }
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "node": true
   },
   "plugins": ["import","react"],
   "extends": [
