--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "speed_reading_software",
-  "version": "0.0.1",
+  "name": "speed-reading-software",
+  "version": "0.0.2",
   "private": true,
   "devDependencies": {
     "babel-core": "6.17.0",
@@ -26,6 +26,7 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-server": "^2.4.0"
   },
   "dependencies": {
@@ -43,7 +44,7 @@
     "websocket": "^1.0.24"
   },
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
+    "build": "npm version patch --no-commit-hooks --no-git-tag-version && webpack --config webpack.prod.js",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "lint": "eslint src/ test/ || exit 0",
     "test": "mocha || exit 0",
