--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "name": "Chrome",
+      "type": "chrome",
       "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}\\webpack.dev.js"
+      "url":"http://localhost:8080",
+      "webRoot": "${workspaceRoot}/src"
     }
   ]
 }
