--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.2",
   "private": true,
   "devDependencies": {
+    "@types/chai": "^4.0.10",
+    "@types/chai-enzyme": "^0.6.3",
     "babel-core": "6.17.0",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.7",
@@ -11,6 +13,7 @@
     "babel-preset-env": "^1.1.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "cors": "^2.8.3",
@@ -21,7 +24,10 @@
     "eslint-plugin-import": "2.0.1",
     "eslint-plugin-react": "6.4.1",
     "extract-text-webpack-plugin": "^2.0.0",
+    "jsdom": "11.5.1",
+    "jsdom-global": "3.0.2",
     "mocha": "^3.2.0",
+    "pixelmatch": "^4.0.2",
     "react-addons-test-utils": "~15.4.2",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
@@ -48,7 +54,7 @@
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "lint": "eslint src/ test/ || exit 0",
     "test": "mocha || exit 0",
-    "test-debug": "mocha --inspect --debug-brk",
+    "test-debug": "mocha --inspect-brk",
     "test-watch": "mocha --watch",
     "pretest": "npm run lint"
   }
