--- a/package.json
+++ b/package.json
@@ -1,57 +1,59 @@
 {
   "name": "speed-reading-software",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "private": true,
   "devDependencies": {
-    "@types/chai": "^4.0.10",
+    "@types/chai": "^4.1.0",
     "@types/chai-enzyme": "^0.6.3",
-    "babel-core": "6.17.0",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.7",
+    "@types/draft-js": "^0.10.19",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.1.2",
+    "babel-loader": "7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.1.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.6.1",
-    "cors": "^2.8.3",
-    "css-loader": "^0.26.1",
-    "enzyme": "^2.7.1",
-    "eslint": "3.8.1",
-    "eslint-config-google": "^0.7.1",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-react": "6.4.1",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "chai": "^4.1.2",
+    "chai-enzyme": "^1.0.0-beta.0",
+    "cors": "^2.8.4",
+    "css-loader": "^0.28.8",
+    "enzyme": "^3.3.0",
+    "eslint": "4.14.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-react": "7.5.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "jsdom": "11.5.1",
     "jsdom-global": "3.0.2",
-    "mocha": "^3.2.0",
+    "mocha": "^4.1.0",
     "pixelmatch": "^4.0.2",
-    "react-addons-test-utils": "~15.4.2",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0",
-    "webpack": "^2.2.1",
+    "sinon": "^4.1.3",
+    "sinon-chai": "^2.14.0",
+    "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-server": "^2.4.0"
+    "webpack-dev-server": "^2.10.0"
   },
   "dependencies": {
-    "connected-react-router": "^4.1.0",
-    "draft-js": "^0.10.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-localize-redux": "^2.12.0",
-    "react-redux": "^5.0.3",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
+    "connected-react-router": "^4.3.0",
+    "draft-js": "^0.10.4",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-localize-redux": "^2.13.7",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.74.2",
-    "websocket": "^1.0.24"
+    "semantic-ui-react": "^0.77.1",
+    "websocket": "^1.0.25"
   },
   "scripts": {
     "build": "npm version patch --no-commit-hooks --no-git-tag-version && webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint src/ test/ || exit 0",
     "test": "mocha || exit 0",
     "test-debug": "mocha --inspect-brk",
