--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "speed-reading-software",
-  "version": "0.0.7",
+  "version": "5.0.10",
   "private": true,
   "devDependencies": {
-    "@types/chai": "^4.1.0",
+    "@types/chai": "^4.1.2",
     "@types/chai-enzyme": "^0.6.3",
     "@types/draft-js": "^0.10.19",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.1.2",
-    "babel-loader": "7.1.2",
-    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
+    "babel-minify-webpack-plugin": "^0.3.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
@@ -18,46 +18,48 @@
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.0",
     "cors": "^2.8.4",
-    "css-loader": "^0.28.8",
+    "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
-    "eslint": "4.14.0",
+    "eslint": "^4.17.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-react": "7.5.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-react": "^7.6.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "jsdom": "11.5.1",
-    "jsdom-global": "3.0.2",
-    "mocha": "^4.1.0",
+    "jsdom": "^11.6.2",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.0.0",
     "pixelmatch": "^4.0.2",
-    "sinon": "^4.1.3",
+    "replace-in-file": "^3.0.0",
+    "sinon": "^4.2.3",
     "sinon-chai": "^2.14.0",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-server": "^2.10.0"
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "connected-react-router": "^4.3.0",
-    "d3-axis": "1.0.8",
-    "d3-scale": "1.0.7",
-    "d3-selection": "1.2.0",
-    "d3-shape": "1.2.0",
-    "d3-transition": "1.1.1",
-    "draft-js": "^0.10.4",
+    "d3-axis": "^1.0.8",
+    "d3-scale": "^1.0.7",
+    "d3-selection": "^1.2.0",
+    "d3-shape": "^1.2.0",
+    "d3-transition": "^1.1.1",
+    "draft-js": "^0.10.5",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-localize-redux": "^2.13.7",
+    "react-localize-redux": "^2.15.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.77.1",
+    "semantic-ui-react": "^0.78.2",
     "websocket": "^1.0.25"
   },
   "scripts": {
-    "build": "npm version patch --no-commit-hooks --no-git-tag-version && webpack --config webpack.prod.js",
+    "build": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && webpack --config webpack.prod.js",
     "start": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint src/ test/ || exit 0",
     "test": "mocha || exit 0",
