--- a/.eslintrc
+++ b/.eslintrc
@@ -1,30 +1,7 @@
 {
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
+  "extends": "react-app",
   "env": {
-    "browser": true,
-    "node": true
-  },
-  "plugins": ["import","react"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "google",
-    "plugin:import/errors",
-    "plugin:import/warnings"
-  ],
-  "rules": {
-    "max-len": ["error", 150],
-    "require-jsdoc": "off",
-    "comma-dangle": "off",
-    "linebreak-style": ["error", "windows"],
-    "no-extend-native": "off",
-    "guard-for-in": "off",
-    "no-console": "off",
-    "react/prop-types": "off"
+    "jest": true,
+    "jasmine": true
   }
 }
