--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,14 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Chrome",
-      "type": "chrome",
-      "request": "launch",
-      "url":"http://localhost:8080",
-      "webRoot": "${workspaceRoot}/src"
+  "configurations": [{
+    "name": "Chrome",
+    "type": "chrome",
+    "request": "launch",
+    "url": "http://localhost:3000",
+    "webRoot": "${workspaceRoot}/src",
+    "sourceMapPathOverrides": {
+      "webpack:///src/*": "${webRoot}/*"
     }
-  ]
+  }]
 }
