--- a/package.json
+++ b/package.json
@@ -2,41 +2,21 @@
   "name": "speed-reading-software",
   "version": "5.0.11",
   "private": true,
+  "homepage": "http://kodu.ut.ee/~arturmar/test",
   "devDependencies": {
     "@types/chai": "^4.1.2",
     "@types/chai-enzyme": "^0.6.3",
     "@types/draft-js": "^0.10.19",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.3.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.0",
-    "cors": "^2.8.4",
-    "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
-    "eslint": "^4.17.0",
-    "eslint-config-google": "^0.9.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-react": "^7.6.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "jsdom": "^11.6.2",
-    "jsdom-global": "^3.0.2",
-    "mocha": "^5.0.0",
     "pixelmatch": "^4.0.2",
+    "react-scripts": "^1.1.1",
     "replace-in-file": "^3.0.0",
-    "sinon": "^4.2.3",
+    "sinon": "^4.3.0",
     "sinon-chai": "^2.14.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "webpack": "^3.11.0",
-    "webpack-bundle-analyzer": "^2.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-bundle-analyzer": "^2.10.0"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -56,17 +36,16 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.14",
     "semantic-ui-react": "^0.78.2",
     "websocket": "^1.0.25"
   },
   "scripts": {
-    "build": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && webpack --config config/webpack.config.prod.js",
-    "build-no-patch": "webpack --config config/webpack.config.prod.js",
-    "start": "webpack-dev-server --config config/webpack.config.dev.js",
-    "lint": "eslint src/ test/ || exit 0",
-    "test": "mocha || exit 0",
-    "test-debug": "mocha --inspect-brk",
-    "test-watch": "mocha --watch --reporter list",
-    "pretest": "npm run lint"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "test-coverage": "react-scripts test --env=jsdom --coverage",
+    "eject": "react-scripts eject",
+    "build-old": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && webpack --config config/webpack.config.prod.js"
   }
 }
