--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "speed-reading-software",
   "version": "5.0.11",
   "private": true,
-  "homepage": "http://kodu.ut.ee/~arturmar/test",
+  "homepage": "http://kodu.ut.ee/~arturmar",
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.13",
     "@storybook/addon-links": "^3.3.13",
@@ -16,6 +16,7 @@
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.0",
     "enzyme": "^3.3.0",
+    "flow-bin": "^0.66.0",
     "pixelmatch": "^4.0.2",
     "react-scripts": "^1.1.1",
     "replace-in-file": "^3.0.0",
@@ -55,6 +56,7 @@
     "test-coverage": "react-scripts test --env=jsdom --coverage",
     "serve": "serve -s build",
     "eject": "react-scripts eject",
+    "flow": "flow",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   }
