--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,8 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [{
+  "configurations": [
+    {
     "name": "Chrome",
     "type": "chrome",
     "request": "launch",
@@ -12,5 +13,21 @@
     "sourceMapPathOverrides": {
       "webpack:///src/*": "${webRoot}/*"
     }
+  },
+  {
+    "name": "Debug tests",
+    "type": "node",
+    "request": "launch",
+    "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/react-scripts",      
+    "args": [
+      "test",
+      "--runInBand",
+      "--no-cache",
+      "--env=jsdom"
+    ],
+    "cwd": "${workspaceRoot}",
+    "protocol": "inspector",
+    "console": "integratedTerminal",
+    "internalConsoleOptions": "neverOpen"
   }]
 }
