--- a/package.json
+++ b/package.json
@@ -8,17 +8,15 @@
     "@storybook/addon-links": "^3.3.13",
     "@storybook/addons": "^3.3.13",
     "@storybook/react": "^3.3.13",
-    "@types/chai": "^4.1.2",
-    "@types/chai-enzyme": "^0.6.3",
-    "@types/draft-js": "^0.10.20",
     "babel-core": "^6.26.0",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.0",
     "enzyme": "^3.3.0",
-    "flow-bin": "^0.66.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "pixelmatch": "^4.0.2",
     "react-scripts": "^1.1.1",
+    "react-test-renderer": "^16.2.0",
     "replace-in-file": "^3.0.0",
     "serve": "^6.4.9",
     "sinon": "^4.3.0",
@@ -52,7 +50,7 @@
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
     "analyze": "source-map-explorer build/static/js/main.*",
     "test": "react-scripts test --env=jsdom",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
+    "test-debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
     "test-coverage": "react-scripts test --env=jsdom --coverage",
     "serve": "serve -s build",
     "eject": "react-scripts eject",
