--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["es2018", "dom"],
     "jsx": "react",
     "allowJs": true,
-    "checkJs": true,
-    "strict": true
+    "checkJs": false,
+    "strict": false
   }
 }
