--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@storybook/addons": "^3.3.13",
     "@storybook/react": "^3.3.13",
     "babel-core": "^6.26.0",
+    "babel-preset-react-app": "^3.1.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "jsdom": "^11.6.2",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.0.1",
     "pixelmatch": "^4.0.2",
     "react-scripts": "^1.1.1",
     "react-test-renderer": "^16.2.0",
@@ -52,10 +56,18 @@
     "test": "react-scripts test --env=jsdom",
     "test-debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
     "test-coverage": "react-scripts test --env=jsdom --coverage",
+    "test-mocha": "SET NODE_ENV=development& mocha --watch",
     "serve": "serve -s build",
     "eject": "react-scripts eject",
-    "flow": "flow",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      "transform-es2015-modules-commonjs"
+    ]
   }
 }
