Mocha tests are now running

--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "build": "react-scripts build",
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
     "analyze": "source-map-explorer build/static/js/main.*",
-    "test": "react-scripts test --env=jsdom",
-    "test-debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
-    "test-coverage": "react-scripts test --env=jsdom --coverage",
-    "test-mocha": "SET NODE_ENV=development& mocha --watch",
+    "test": "SET NODE_ENV=test& mocha",
+    "test-watch": "SET NODE_ENV=test& mocha --watch --reporter list",
+    "test-debug": "SET NODE_ENV=test& mocha --inspect-brk",
+    "test-jest": "react-scripts test --env=jsdom",
+    "test-jest-debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
+    "test-jest-coverage": "react-scripts test --env=jsdom --coverage",
     "serve": "serve -s build",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
