--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsdom": "^11.6.2",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.0.1",
+    "nyc": "^11.4.1",
     "pixelmatch": "^4.0.2",
     "react-scripts": "^1.1.1",
     "react-test-renderer": "^16.2.0",
@@ -46,7 +47,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.14",
-    "semantic-ui-react": "^0.78.2"
+    "semantic-ui-react": "^0.78.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,9 +57,10 @@
     "test": "SET NODE_ENV=test& mocha",
     "test-watch": "SET NODE_ENV=test& mocha --watch --reporter list",
     "test-debug": "SET NODE_ENV=test& mocha --inspect-brk",
-    "test-jest": "react-scripts test --env=jsdom",
+    "test-coverage": "SET NODE_ENV=test& nyc mocha",
+    "test-jest": "react-scripts test --runInBand --env=jsdom",
     "test-jest-debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
-    "test-jest-coverage": "react-scripts test --env=jsdom --coverage",
+    "test-jest-coverage": "react-scripts test --coverage --env=jsdom",
     "serve": "serve -s build",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
