--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "chai-enzyme": "^1.0.0-beta.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "jsdom": "^11.6.2",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.0.1",
@@ -37,7 +42,8 @@
     "d3-shape": "^1.2.0",
     "d3-transition": "^1.1.1",
     "draft-js": "^0.10.5",
-    "prop-types": "^15.6.0",
+    "history": "^4.7.2",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-localize-redux": "^2.15.1",
@@ -46,14 +52,16 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.14",
-    "semantic-ui-react": "^0.78.3"
+    "semantic-ui-css": "2.2.14",
+    "semantic-ui-react": "0.78.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SET BROWSER=none&react-scripts start",
     "build": "react-scripts build",
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
     "analyze": "source-map-explorer build/static/js/main.*",
+    "lint": "eslint src/ || exit 0",
+    "lint-fix": "eslint src/ || exit 0",
     "test": "SET NODE_ENV=test& mocha",
     "test-watch": "SET NODE_ENV=test& mocha --watch --reporter list",
     "test-debug": "SET NODE_ENV=test& mocha --inspect-brk",
