--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "jsdom": "^11.6.2",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.0.4",
-    "nyc": "^11.5.0",
+    "nyc": "^11.6.0",
     "pixelmatch": "^4.0.2",
     "react-scripts": "^1.1.1",
     "react-test-renderer": "^16.2.0",
     "replace-in-file": "^3.2.0",
     "serve": "^6.5.3",
-    "sinon": "^4.4.2",
+    "sinon": "^4.4.5",
     "sinon-chai": "^2.14.0",
     "source-map-explorer": "^1.5.0"
   },
@@ -46,6 +46,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
     "react-localize-redux": "^2.16.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
