Saved statistics is now shown

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SpeedReading",
-  "name": "Speed Reading Software",
+  "short_name": "Kiirlugemine",
+  "name": "Kiirlugemine 5.0",
   "icons": [
     {
       "src": "favicon.ico",
