--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,3 +1,11 @@
 {
-  
+  "compilerOptions": {
+      "target": "esnext",
+      "module": "commonjs",
+      "checkJs": false,
+      "jsx": "react",
+  },
+  "exclude": [
+      "node_modules"
+  ],
 }
