--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "speed-reading-software",
+  "name": "kiirlugemine-5",
   "version": "5.0.16",
   "private": true,
   "homepage": "http://kodu.ut.ee/~arturmar",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.15",
-    "@storybook/addon-links": "^3.3.15",
-    "@storybook/addons": "^3.3.15",
-    "@storybook/react": "^3.3.15",
+    "@storybook/addon-actions": "^3.4.0",
+    "@storybook/addon-links": "^3.4.0",
+    "@storybook/addons": "^3.4.0",
+    "@storybook/react": "^3.4.0",
     "babel-core": "^6.26.0",
     "babel-preset-react-app": "^3.1.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
@@ -17,10 +17,11 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "jsdom": "^11.6.2",
+    "immutable": "^3.8.2",
+    "jsdom": "^11.7.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0",
@@ -29,13 +30,13 @@
     "react-test-renderer": "^16.3.0",
     "replace-in-file": "^3.4.0",
     "serve": "^6.5.3",
-    "sinon": "^4.4.9",
-    "sinon-chai": "^2.14.0",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0",
     "source-map-explorer": "^1.5.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "c3": "^0.5.1",
+    "c3": "^0.5.2",
     "connected-react-router": "^4.3.0",
     "d3-axis": "^1.0.8",
     "d3-scale": "^2.0.0",
