--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kiirlugemine-5",
   "version": "5.0.18",
   "private": true,
-  "homepage": "http://prog.keeleressursid.ee/speedreading",
+  "homepage": "http://kodu.ut.ee/~arturmar",
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.0",
     "@storybook/addon-links": "^3.4.0",
@@ -29,7 +29,7 @@
     "react-scripts": "^1.1.4",
     "react-test-renderer": "^16.3.1",
     "replace-in-file": "^3.4.0",
-    "serve": "^6.5.3",
+    "serve": "^6.5.4",
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0",
     "source-map-explorer": "^1.5.0"
