--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kiirlugemine-5",
-  "version": "5.0.18",
+  "version": "5.0.19",
   "private": true,
   "homepage": "http://kodu.ut.ee/~arturmar",
   "devDependencies": {
@@ -17,17 +17,17 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "immutable": "^3.8.2",
     "jsdom": "^11.7.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^5.0.5",
+    "mocha": "^5.1.0",
     "nyc": "^11.6.0",
     "pixelmatch": "^4.0.2",
     "react-scripts": "^1.1.4",
-    "react-test-renderer": "^16.3.1",
+    "react-test-renderer": "^16.3.2",
     "replace-in-file": "^3.4.0",
     "serve": "^6.5.5",
     "sinon": "^4.5.0",
@@ -45,9 +45,10 @@
     "d3-transition": "^1.1.1",
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
+    "html2canvas": "^1.0.0-alpha.12",
     "prop-types": "^15.6.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-loadable": "^5.3.1",
     "react-localize-redux": "^2.17.5",
     "react-redux": "^5.0.7",
