--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "kiirlugemine-5",
-  "version": "5.0.19",
+  "name": "kiirlugemine",
+  "description": "Software for improving reading speed",
+  "version": "5.0.20",
+  "main": "index.js",
   "private": true,
+  "author": {
+    "name": "Marten Siiber",
+    "email": "martensiiber@gmail.com"
+  },
   "homepage": "http://kodu.ut.ee/~arturmar",
+  "license": "MIT",
+  "keywords": [],
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.1",
-    "@storybook/addon-links": "^3.4.1",
-    "@storybook/addons": "^3.4.1",
-    "@storybook/react": "^3.4.1",
+    "@storybook/addon-actions": "^3.4.2",
+    "@storybook/addon-links": "^3.4.2",
+    "@storybook/addons": "^3.4.2",
+    "@storybook/react": "^3.4.2",
     "babel-core": "^6.26.0",
     "babel-preset-react-app": "^3.1.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
@@ -21,10 +29,10 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "immutable": "^3.8.2",
-    "jsdom": "^11.7.0",
+    "jsdom": "^11.8.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^5.1.0",
-    "nyc": "^11.6.0",
+    "mocha": "^5.1.1",
+    "nyc": "^11.7.1",
     "pixelmatch": "^4.0.2",
     "react-scripts": "^1.1.4",
     "react-test-renderer": "^16.3.2",
@@ -54,7 +62,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "2.2.14",
     "semantic-ui-react": "0.78.2"
@@ -69,7 +77,7 @@
     "test": "SET NODE_ENV=test& mocha",
     "test-watch": "SET NODE_ENV=test& mocha --watch --reporter list",
     "test-debug": "SET NODE_ENV=test& mocha --inspect-brk",
-    "test-coverage": "SET NODE_ENV=test& nyc mocha",
+    "test-coverage": "SET NODE_ENV=test& nyc --extension .jsx mocha",
     "test-jest": "react-scripts test --runInBand --env=jsdom",
     "test-jest-debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
     "test-jest-coverage": "react-scripts test --coverage --env=jsdom",
