Refactor, added tests for disappearing text exercise

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "immutable": "^3.8.2",
-    "jsdom": "^11.8.0",
+    "jsdom": "^11.9.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.1.1",
     "nyc": "^11.7.1",
@@ -74,7 +74,7 @@
     "lint": "eslint src/ || exit 0",
     "lint-fix": "eslint src/ || exit 0",
     "test": "SET NODE_ENV=test& mocha",
-    "test-watch": "SET NODE_ENV=test& mocha --watch --reporter list",
+    "test-watch": "SET NODE_ENV=test& mocha --reporter list --watch --watch-extensions jsx",
     "test-debug": "SET NODE_ENV=test& mocha --inspect-brk",
     "test-coverage": "SET NODE_ENV=test& nyc --extension .jsx mocha",
     "test-jest": "react-scripts test --runInBand --env=jsdom",
