--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.0.21",
+  "version": "5.0.22",
   "main": "index.js",
   "private": true,
   "author": {
@@ -39,13 +39,14 @@
     "react-test-renderer": "^16.3.2",
     "replace-in-file": "^3.4.0",
     "serve": "^6.5.6",
-    "sinon": "^5.0.2",
+    "sinon": "^5.0.3",
     "sinon-chai": "^3.0.0",
     "source-map-explorer": "^1.5.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "connected-react-router": "^4.3.0",
+    "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
@@ -56,7 +57,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-loadable": "^5.3.1",
+    "react-loadable": "^5.4.0",
     "react-localize-redux": "^2.17.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
