--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "jsdom": "^11.10.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.1.1",
-    "nyc": "^11.7.1",
+    "nyc": "^11.7.3",
     "pixelmatch": "^4.0.2",
     "prop-types": "^15.6.1",
     "react-scripts": "^1.1.4",
     "react-test-renderer": "^16.3.2",
     "replace-in-file": "^3.4.0",
     "serve": "^6.5.6",
-    "sinon": "^5.0.3",
+    "sinon": "^5.0.7",
     "sinon-chai": "^3.0.0",
     "source-map-explorer": "^1.5.0"
   },
@@ -48,6 +48,7 @@
     "connected-react-router": "^4.3.0",
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
+    "d3-format": "^1.3.0",
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
     "d3-shape": "^1.2.0",
