--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.0.22",
+  "version": "5.0.23",
   "main": "index.js",
   "private": true,
   "author": {
@@ -12,10 +12,10 @@
   "license": "MIT",
   "keywords": [],
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.3",
-    "@storybook/addon-links": "^3.4.3",
-    "@storybook/addons": "^3.4.3",
-    "@storybook/react": "^3.4.3",
+    "@storybook/addon-actions": "^3.4.4",
+    "@storybook/addon-links": "^3.4.4",
+    "@storybook/addons": "^3.4.4",
+    "@storybook/react": "^3.4.4",
     "babel-core": "^6.26.3",
     "babel-preset-react-app": "^3.1.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
@@ -27,7 +27,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.8.1",
     "immutable": "^3.8.2",
     "jsdom": "^11.10.0",
     "jsdom-global": "^3.0.2",
@@ -65,6 +65,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "rheostat": "^2.1.3",
     "semantic-ui-css": "2.2.14",
     "semantic-ui-react": "0.78.2"
   },
