--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "name": "Marten Siiber",
     "email": "martensiiber@gmail.com"
   },
-  "homepage": "http://prog.keeleressursid.ee/speedreading",
+  "homepage": "https://kiirlugemine.keeleressursid.ee",
   "license": "MIT",
   "keywords": [],
   "devDependencies": {
@@ -25,14 +25,14 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
     "immutable": "^3.8.2",
     "jsdom": "^11.10.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.1.1",
-    "nyc": "^11.7.3",
+    "nyc": "^11.8.0",
     "pixelmatch": "^4.0.2",
     "prop-types": "^15.6.1",
     "react-scripts": "^1.1.4",
