--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "homepage": "https://kiirlugemine.keeleressursid.ee",
   "license": "MIT",
-  "keywords": [],
+  "keywords": [
+    "kiirlugemine",
+    "kiirlugemise harjutused",
+    "speed reading",
+    "speed reading exercises"
+  ],
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.4",
-    "@storybook/addon-links": "^3.4.4",
-    "@storybook/addons": "^3.4.4",
-    "@storybook/react": "^3.4.4",
+    "@storybook/addon-actions": "^3.4.7",
+    "@storybook/addon-links": "^3.4.7",
+    "@storybook/addons": "^3.4.7",
+    "@storybook/react": "^3.4.7",
     "babel-core": "^6.26.3",
     "babel-preset-react-app": "^3.1.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
@@ -27,20 +32,20 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react": "^7.9.1",
     "immutable": "^3.8.2",
-    "jsdom": "^11.10.0",
+    "jsdom": "^11.11.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^5.1.1",
-    "nyc": "^11.8.0",
+    "mocha": "^5.2.0",
+    "nyc": "^11.9.0",
     "pixelmatch": "^4.0.2",
     "prop-types": "^15.6.1",
     "react-scripts": "^1.1.4",
-    "react-test-renderer": "^16.3.2",
+    "react-test-renderer": "^16.4.0",
     "replace-in-file": "^3.4.0",
-    "serve": "^6.5.7",
-    "sinon": "^5.0.7",
-    "sinon-chai": "^3.0.0",
+    "serve": "^8.1.4",
+    "sinon": "^6.0.0",
+    "sinon-chai": "^3.1.0",
     "source-map-explorer": "^1.5.0"
   },
   "dependencies": {
@@ -52,20 +57,21 @@
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
     "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.1.1",
     "d3-transition": "^1.1.1",
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
     "html2canvas": "^1.0.0-alpha.12",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-loadable": "^5.4.0",
     "react-localize-redux": "^2.17.5",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "rheostat": "^2.1.3",
+    "redux-thunk": "^2.3.0",
+    "rheostat": "^2.2.0",
     "semantic-ui-css": "2.2.14",
     "semantic-ui-react": "0.78.2"
   },
