--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,42 @@
 {
-  "short_name": "Kiirlugemine",
   "name": "Kiirlugemine 5.0",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "144x144 64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
+  "short_name": "Kiirlugemine",
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000bad",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "description": "Lugemiskiiruse arendamise rakendus",
+  "icons": [{
+    "src": "../src/assets/icon/book48.png",
+    "sizes": "48x48",
+    "type": "image/png"
+  }, {
+    "src": "../src/assets/icon/book72.png",
+    "sizes": "72x72",
+    "type": "image/png"
+  }, {
+    "src": "../src/assets/icon/book96.png",
+    "sizes": "96x96",
+    "type": "image/png"
+  }, {
+    "src": "../src/assets/icon/book144.png",
+    "sizes": "144x144",
+    "type": "image/png"
+  }, {
+    "src": "../src/assets/icon/book168.png",
+    "sizes": "168x168",
+    "type": "image/png"
+  }, {
+    "src": "../src/assets/icon/book192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }, {
+    "src": "../src/assets/icon/book256.png",
+    "sizes": "256x256",
+    "type": "image/png"
+  }, {
+    "src": "../src/assets/icon/book512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }]
 }
