--- a/.eslintrc
+++ b/.eslintrc
@@ -18,13 +18,18 @@
     "max-len": ["error", 150],
     "linebreak-style": 0,
     "react/prop-types": 0,
+    "react/destructuring-assignment": 0,
+    "react/jsx-wrap-multilines": 0,
+    "react/no-access-state-in-setstate": 0,
+    "object-curly-newline": 0,
+    "operator-linebreak": 0,
     "import/no-named-as-default": 0,
     "import/no-extraneous-dependencies": [
       "error", {
         "dependencies": true,
         "devDependencies": true,
         "optionalDependencies": true,
-        "peerDependencies": true 
+        "peerDependencies": true
       }
     ],
     "no-console": [
