--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "email": "martensiiber@gmail.com"
   },
   "homepage": "https://kiirlugemine.keeleressursid.ee",
-  "license": "MIT",
+  "license": "GPL-3",
   "keywords": [
     "kiirlugemine",
     "kiirlugemise harjutused",
@@ -17,34 +17,34 @@
     "speed reading exercises"
   ],
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.7",
-    "@storybook/addon-links": "^3.4.7",
-    "@storybook/addons": "^3.4.7",
-    "@storybook/react": "^3.4.7",
+    "@storybook/addon-actions": "^3.4.8",
+    "@storybook/addon-links": "^3.4.8",
+    "@storybook/addons": "^3.4.8",
+    "@storybook/react": "^3.4.8",
     "babel-core": "^6.26.3",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-preset-react-app": "^3.1.2",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint": "^5.0.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-react": "^7.10.0",
     "immutable": "^3.8.2",
     "jsdom": "^11.11.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
     "nyc": "^11.9.0",
     "pixelmatch": "^4.0.2",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "react-scripts": "^1.1.4",
     "react-test-renderer": "^16.4.1",
     "replace-in-file": "^3.4.0",
     "serve": "^8.2.0",
-    "sinon": "^6.0.0",
+    "sinon": "^6.0.1",
     "sinon-chai": "^3.2.0",
     "source-map-explorer": "^1.5.0"
   },
