--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "babel-preset-react-app": "^3.1.2",
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "canvas-prebuilt": "^1.6.11",
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.1",
     "cross-env": "^5.2.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "^5.5.0",
+    "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
@@ -42,10 +42,10 @@
     "pixelmatch": "^4.0.2",
     "prop-types": "^15.6.2",
     "react-scripts": "^1.1.5",
-    "react-test-renderer": "^16.5.0",
+    "react-test-renderer": "^16.5.1",
     "replace-in-file": "^3.4.2",
-    "serve": "^10.0.0",
-    "sinon": "^6.2.0",
+    "serve": "^10.0.1",
+    "sinon": "^6.3.3",
     "sinon-chai": "^3.2.0",
     "source-map-explorer": "^1.6.0"
   },
@@ -63,8 +63,8 @@
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
     "html2canvas": "^1.0.0-alpha.12",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-loadable": "^5.5.0",
     "react-localize-redux": "^2.17.5",
     "react-redux": "^5.0.7",
@@ -78,6 +78,7 @@
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
+    "docker-start": "npm run docker-build && npm run docker-run",
     "docker-build": "docker build -t speed-reading .",
     "docker-run": "docker run speed-reading",
     "build": "react-scripts build",
