--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,8 @@ pages:
     - mv src/credentials.js.example src/credentials.js # Credentials are required
     - CI=false npm run build # Set CI=false or else build fails when there are warnings
     - rm -rf public
-##  - mv build public
+    - mkdir public
+##  - mv build/* public
     - mv coverage public
   artifacts:
     paths:
