--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
-      "target": "esnext",
-      "module": "commonjs",
-      "checkJs": false,
-      "jsx": "react",
+    "target": "esnext",
+    "module": "commonjs",
+    "checkJs": false,
+    "jsx": "react"
   },
-  "exclude": [
-      "node_modules"
-  ],
+  "exclude": ["node_modules"]
 }
