--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kiirlugemine 5.1",
+  "name": "Kiirlugemise tarkvara",
   "short_name": "Kiirlugemine",
   "start_url": "./index.html",
   "display": "standalone",
