--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,11 @@
     "target": "esnext",
     "module": "commonjs",
     "checkJs": false,
+    "allowSyntheticDefaultImports": true,
     "jsx": "react"
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "typeAcquisition": {
+    "include": ["jest"]
+  }
 }
