--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,22 +3,22 @@ image: node:10.13.0
 # Cache modules between builds
 cache:
   paths:
-  - node_modules/
+    - node_modules/
 
 build:
   stage: build
   script:
-   - npm install
+    - npm install
 
 test:
   stage: test
   script:
-   - npm run test
+    - npm run test-no-watch
 
 coverage:
   stage: test
   script:
-   - npm run test-coverage
+    - npm run test-coverage
   artifacts:
     paths:
       - coverage/
@@ -32,15 +32,14 @@ pages:
     - CI=false npm run build # Set CI=false or else build fails when there are warnings
     - rm -rf public
     - mkdir public
-##  - mv build/* public
-    - mv coverage public
+    ##  - mv build/* public
+    - mv coverage/lcov-report public
   artifacts:
     paths:
       - public
     expire_in: 30 days
   only:
     - dev
-
 ##code_quality:
 ##  image: docker:stable
 ##  variables:
