--- a/package.json
+++ b/package.json
@@ -31,34 +31,30 @@
     "@storybook/react": "^4.1.11",
     "axios-mock-adapter": "^1.16.0",
     "canvas": "2.1.0",
-    "chai": "^4.2.0",
-    "chai-enzyme": "^1.0.0-beta.1",
     "cross-env": "^5.2.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "immutable": "^3.8.2",
+    "jest-dom": "^3.1.2",
+    "jest-environment-jsdom-with-canvas": "git+https://github.com/arcatdmz/jest-environment-jsdom-with-canvas.git",
     "jsdom": "^13.2.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^5.2.0",
-    "nyc": "^13.2.0",
+    "nyc": "^13.3.0",
     "pixelmatch": "^4.0.2",
-    "prop-types": "^15.6.2",
-    "react-scripts": "^2.1.3",
+    "prop-types": "^15.7.2",
+    "react-scripts": "^2.1.5",
     "react-test-renderer": "^16.7.0",
+    "react-testing-library": "^5.8.0",
     "replace-in-file": "^3.4.3",
     "serve": "^10.1.2",
-    "sinon": "^7.2.3",
-    "sinon-chai": "^3.3.0",
-    "source-map-explorer": "^1.6.0"
+    "source-map-explorer": "^1.7.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "connected-react-router": "^6.3.0",
+    "connected-react-router": "^6.3.1",
     "d3-array": "^2.0.3",
     "d3-axis": "^1.0.12",
     "d3-format": "^1.3.2",
@@ -95,14 +91,11 @@
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
     "analyze": "source-map-explorer build/static/js/main.*",
     "lint": "eslint src/ || exit 0",
-    "lint-fix": "eslint src/ || exit 0",
-    "test": "cross-env NODE_ENV=test mocha",
-    "test-watch": "cross-env NODE_ENV=test mocha --reporter list --watch --watch-extensions jsx",
-    "test-debug": "cross-env NODE_ENV=test mocha --inspect-brk",
-    "test-coverage": "cross-env NODE_ENV=test nyc mocha",
-    "test-jest": "react-scripts test --runInBand --env=jsdom",
-    "test-jest-debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
-    "test-jest-coverage": "react-scripts test --coverage --env=jsdom",
+    "lint-fix": "eslint src/ -- --fix || exit 0",
+    "test": "react-scripts test --env=jest-environment-jsdom-with-canvas",
+    "test-no-watch": "react-scripts test --watchAll=false --env=jest-environment-jsdom-with-canvas",
+    "test-debug": "react-scripts --inspect-brk test --env=jest-environment-jsdom-with-canvas",
+    "test-coverage": "react-scripts test --coverage --env=jest-environment-jsdom-with-canvas",
     "serve": "serve -s build",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
