Added tests for setting options and re-enabled serviceWorker

--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   ],
   "devDependencies": {
     "@babel/register": "^7.0.0",
-    "@storybook/addon-a11y": "^4.1.11",
-    "@storybook/addon-actions": "^4.1.11",
-    "@storybook/addon-centered": "^4.1.11",
+    "@storybook/addon-a11y": "^4.1.12",
+    "@storybook/addon-actions": "^4.1.12",
+    "@storybook/addon-centered": "^4.1.12",
     "@storybook/addon-console": "^1.1.0",
-    "@storybook/addon-knobs": "^4.1.11",
-    "@storybook/addon-links": "^4.1.11",
-    "@storybook/addon-notes": "^4.1.11",
-    "@storybook/addon-options": "^4.1.11",
-    "@storybook/addon-viewport": "^4.1.11",
-    "@storybook/addons": "^4.1.11",
-    "@storybook/react": "^4.1.11",
+    "@storybook/addon-knobs": "^4.1.12",
+    "@storybook/addon-links": "^4.1.12",
+    "@storybook/addon-notes": "^4.1.12",
+    "@storybook/addon-options": "^4.1.12",
+    "@storybook/addon-viewport": "^4.1.12",
+    "@storybook/addons": "^4.1.12",
+    "@storybook/react": "^4.1.12",
     "axios-mock-adapter": "^1.16.0",
     "canvas": "2.1.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.14.0",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -47,10 +47,11 @@
     "prop-types": "^15.7.2",
     "react-scripts": "^2.1.5",
     "react-test-renderer": "^16.7.0",
-    "react-testing-library": "^5.8.0",
+    "react-testing-library": "^5.9.0",
     "replace-in-file": "^3.4.3",
     "serve": "^10.1.2",
-    "source-map-explorer": "^1.7.0"
+    "source-map-explorer": "^1.7.0",
+    "workbox-build": "^3.6.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -72,7 +73,7 @@
     "react-ga": "^2.5.7",
     "react-loadable": "^5.5.0",
     "react-localize-redux": "2.17.5",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
@@ -87,7 +88,8 @@
     "docker-start": "npm run docker-build && npm run docker-run",
     "docker-build": "docker build -t speed-reading .",
     "docker-run": "docker run speed-reading",
-    "build": "react-scripts build",
+    "build-sw": "node ./src/sw-build.js",
+    "build": "react-scripts build && npm run build-sw",
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
     "analyze": "source-map-explorer build/static/js/main.*",
     "lint": "eslint src/ || exit 0",
@@ -111,7 +113,9 @@
       "src/**/*.{js,jsx}",
       "!/node_modules/",
       "!src/index.js",
-      "!src/registerServiceWorker.js",
+      "!src/serviceWorker.js",
+      "!src/sw.js",
+      "!src/sw-build.js",
       "!src/polyfill/*",
       "!src/stories/*",
       "!src/utils/logger.js"
