Added own text selection test

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.12",
+  "version": "5.1.13",
   "main": "index.js",
   "private": true,
   "author": {
@@ -18,17 +18,17 @@
   ],
   "devDependencies": {
     "@babel/register": "^7.0.0",
-    "@storybook/addon-a11y": "^4.1.12",
-    "@storybook/addon-actions": "^4.1.12",
-    "@storybook/addon-centered": "^4.1.12",
+    "@storybook/addon-a11y": "^4.1.13",
+    "@storybook/addon-actions": "^4.1.13",
+    "@storybook/addon-centered": "^4.1.13",
     "@storybook/addon-console": "^1.1.0",
-    "@storybook/addon-knobs": "^4.1.12",
-    "@storybook/addon-links": "^4.1.12",
-    "@storybook/addon-notes": "^4.1.12",
-    "@storybook/addon-options": "^4.1.12",
-    "@storybook/addon-viewport": "^4.1.12",
-    "@storybook/addons": "^4.1.12",
-    "@storybook/react": "^4.1.12",
+    "@storybook/addon-knobs": "^4.1.13",
+    "@storybook/addon-links": "^4.1.13",
+    "@storybook/addon-notes": "^4.1.13",
+    "@storybook/addon-options": "^4.1.13",
+    "@storybook/addon-viewport": "^4.1.13",
+    "@storybook/addons": "^4.1.13",
+    "@storybook/react": "^4.1.13",
     "axios-mock-adapter": "^1.16.0",
     "canvas": "2.1.0",
     "cross-env": "^5.2.0",
@@ -51,7 +51,7 @@
     "replace-in-file": "^3.4.3",
     "serve": "^10.1.2",
     "source-map-explorer": "^1.7.0",
-    "workbox-build": "^3.6.3"
+    "workbox-build": "^4.0.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -96,7 +96,7 @@
     "lint-fix": "eslint src/ -- --fix || exit 0",
     "test": "react-scripts test --env=jest-environment-jsdom-with-canvas",
     "test-no-watch": "react-scripts test --watchAll=false --env=jest-environment-jsdom-with-canvas",
-    "test-debug": "react-scripts --inspect-brk test --env=jest-environment-jsdom-with-canvas",
+    "test-debug": "react-scripts --inspect-brk test --env=jest-environment-jsdom-with-canvas --runInBand",
     "test-coverage": "react-scripts test --coverage --env=jest-environment-jsdom-with-canvas",
     "serve": "serve -s build",
     "eject": "react-scripts eject",
