--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.13",
+  "version": "5.1.15",
   "main": "index.js",
   "private": true,
   "author": {
@@ -18,25 +18,25 @@
   ],
   "devDependencies": {
     "@babel/register": "^7.4.0",
-    "@storybook/addon-a11y": "^5.0.5",
-    "@storybook/addon-actions": "^5.0.5",
-    "@storybook/addon-centered": "^5.0.5",
-    "@storybook/addon-console": "^1.1.0",
-    "@storybook/addon-knobs": "^5.0.5",
-    "@storybook/addon-links": "^5.0.5",
-    "@storybook/addon-notes": "^5.0.5",
-    "@storybook/addon-viewport": "^5.0.5",
-    "@storybook/addons": "^5.0.5",
-    "@storybook/react": "^5.0.5",
+    "@storybook/addon-a11y": "^5.2.8",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-centered": "^5.2.8",
+    "@storybook/addon-console": "^1.2.1",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addon-notes": "^5.2.8",
+    "@storybook/addon-viewport": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
     "axios-mock-adapter": "^1.16.0",
     "babel-eslint": "^10.0.1",
     "canvas": "2.1.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
@@ -46,20 +46,21 @@
     "jest-environment-jsdom-with-canvas": "git+https://github.com/arcatdmz/jest-environment-jsdom-with-canvas.git",
     "jsdom": "^13.2.0",
     "jsdom-global": "^3.0.2",
-    "nyc": "^13.3.0",
+    "nyc": "^14.1.1",
     "pixelmatch": "^4.0.2",
     "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
     "react-scripts": "^2.1.8",
     "react-test-renderer": "^16.7.0",
-    "react-testing-library": "^6.0.2",
+    "react-testing-library": "^6.1.2",
     "replace-in-file": "^3.4.4",
     "serve": "^10.1.2",
     "source-map-explorer": "^1.8.0",
-    "workbox-build": "^4.1.1"
+    "workbox-build": "^4.3.1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "@sentry/browser": "^5.7.1",
+    "axios": "^0.18.1",
     "connected-react-router": "^6.3.2",
     "d3-array": "^2.0.3",
     "d3-axis": "^1.0.12",
