--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.22",
+  "version": "5.1.23",
   "main": "index.js",
   "private": true,
   "author": {
@@ -18,17 +18,16 @@
   ],
   "devDependencies": {
     "@babel/register": "^7.8.3",
-    "@storybook/addon-a11y": "^5.3.13",
-    "@storybook/addon-actions": "^5.3.13",
-    "@storybook/addon-centered": "^5.3.13",
+    "@storybook/addon-a11y": "^6.0.21",
+    "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-knobs": "^5.3.13",
-    "@storybook/addon-links": "^5.3.13",
-    "@storybook/addon-notes": "^5.3.13",
-    "@storybook/addon-viewport": "^5.3.13",
-    "@storybook/addons": "^5.3.13",
-    "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.13",
+    "@storybook/addon-controls": "6.0.21",
+    "@storybook/addon-docs": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/addon-viewport": "^6.0.21",
+    "@storybook/addons": "^6.0.21",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.21",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
     "axios-mock-adapter": "^1.17.0",
@@ -52,10 +51,10 @@
     "pixelmatch": "^5.1.0",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^3.4.3",
     "react-test-renderer": "^16.12.0",
     "replace-in-file": "^5.0.2",
-    "serve": "^11.3.0",
+    "serve": "^11.3.2",
     "source-map-explorer": "^2.2.2",
     "workbox-build": "^5.0.0"
   },
@@ -102,6 +101,7 @@
     "lint": "eslint src/ || exit 0",
     "lint-fix": "eslint src/ --fix || exit 0",
     "test": "react-scripts test --env=jest-environment-jsdom-with-canvas",
+    "test-watch": "npm run test",
     "test-no-watch": "react-scripts test --watchAll=false --env=jest-environment-jsdom-with-canvas",
     "test-debug": "react-scripts --inspect-brk test --env=jest-environment-jsdom-with-canvas --runInBand",
     "test-coverage": "react-scripts test --coverage --env=jest-environment-jsdom-with-canvas",
