Added Mock Service Worker

--- a/src/credentials.js.example
+++ b/src/credentials.js.example
@@ -5,6 +5,7 @@ const credentials = {
   },
   demo: {
     username: '', // Demo account authentication
+    password: '', // Unit testing
   },
 };
 
