--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsdom": "^13.2.0",
     "jsdom-global": "^3.0.2",
     "lint-staged": "^10.5.2",
+    "msw": "^0.24.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pixelmatch": "^5.2.1",
