Added tests linting

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-testing-library": "^3.10.1",
     "husky": "^4.3.5",
     "immutable": "^3.8.2",
     "jest-environment-jsdom-with-canvas": "git+https://github.com/arcatdmz/jest-environment-jsdom-with-canvas.git",
@@ -110,7 +112,8 @@
     "build": "react-scripts build --profile && npm run build-sw",
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && npm run build",
     "analyze": "source-map-explorer build/static/js/main.*",
-    "lint": "eslint .",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix",
     "prettier": "prettier \"**/*.+(js|jsx|json|css)\"",
     "format": "npm run prettier -- --write",
     "check-format": "npm run prettier -- --list-different",
