--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,9 @@
   "extends": [
     "react-app",
     "prettier",
-    "prettier/react"
+    "prettier/react",
+    "plugin:jest-dom/recommended",
+    "plugin:testing-library/react"
   ],
   "parser": "babel-eslint",
   "env": {
