--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@babel/register": "^7.12.13",
     "@storybook/addon-a11y": "^6.1.17",
     "@storybook/addon-actions": "^6.1.17",
-    "@storybook/addon-console": "^1.2.2",
+    "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-controls": "6.1.17",
     "@storybook/addon-docs": "^6.1.17",
     "@storybook/addon-links": "^6.1.17",
@@ -30,11 +30,11 @@
     "@storybook/react": "^6.1.17",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
+    "@testing-library/user-event": "^12.7.1",
     "axios-mock-adapter": "^1.19.0",
-    "canvas": "2.1.0",
+    "canvas": "2.6.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-prettier": "^3.3.1",
@@ -42,11 +42,10 @@
     "eslint-plugin-testing-library": "^3.10.1",
     "husky": "^5.0.9",
     "immutable": "^3.8.2",
-    "jest-environment-jsdom-with-canvas": "git+https://github.com/arcatdmz/jest-environment-jsdom-with-canvas.git",
-    "jsdom": "^13.2.0",
+    "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
     "lint-staged": "^10.5.4",
-    "msw": "^0.26.1",
+    "msw": "^0.26.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pixelmatch": "^5.2.1",
@@ -113,10 +112,10 @@
     "format": "npm run prettier -- --write",
     "check-format": "npm run prettier -- --list-different",
     "validate": "npm-run-all --parallel check-format lint test:no-watch build",
-    "test": "react-scripts test --env=jest-environment-jsdom-with-canvas",
+    "test": "react-scripts test",
     "test:watch": "npm run test -- --watchAll=true",
     "test:no-watch": "npm run test -- --watchAll=false",
-    "test:debug": "react-scripts --inspect-brk test --env=jest-environment-jsdom-with-canvas --runInBand",
+    "test:debug": "react-scripts --inspect-brk test --runInBand",
     "test:coverage": "npm run test:no-watch -- --coverage",
     "serve": "serve -s build",
     "eject": "react-scripts eject",
