Changes based on feedback

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.31",
+  "version": "5.1.34",
   "main": "index.js",
   "private": true,
   "author": {
@@ -106,6 +106,7 @@
     "docker-build": "docker build -t speed-reading .",
     "docker-run": "docker run speed-reading",
     "build": "node ./date.build.js && react-scripts build --profile && cp build/service-worker.js build/sw.js",
+    "build-no-update": "react-scripts build --profile && cp build/service-worker.js build/sw.js",
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && npm run build",
     "analyze": "source-map-explorer build/static/js/main.*",
     "lint": "eslint . --ext .js,.jsx",
